--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "chart.js": "^4.4.6"
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-annotation": "^3.1.0"
   }
 }
