--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.6",
-    "chartjs-plugin-annotation": "^3.1.0"
+    "chartjs-plugin-annotation": "^3.1.0",
+    "echarts": "^5.5.1"
   }
 }
